# falcon

./: .gitignore  .prettierignore  .prettierrc  README.md  __init__.py  project.py  pyproject.toml  requirements.txt  wsgi.py
tests/: headless_browser.py
utils/: logger.py
